syntax = "proto3";
package cosmos_sdk.query.v1;

option go_package = "github.com/cosmos/cosmos-sdk/types/query";

message PageRequest {
    bytes page_key = 1;
    uint64 page_num = 2;
    uint64 limit = 3;
    bool count_total = 4;
}

message PageResponse {
    bytes next_page_key = 1;
    uint64 total = 2;
}
